node-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
spec:
  selector:
    matchLabels:
      app: node-app
  replicas: 4 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: israeldahan/node-app@sha256:be7bb993757ffd189e09780d7350580ed5bb887ea3194df55ab64f99edaabd8d
        ports:
        - containerPort: 3000
