node-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  labels:
    app: node-app
spec:
  # type: NodePort
  ports:
  - port: 3000
    name: web
  selector:
    app: node-app
